now forcing the .container into layout mode (via zoom), to resolve IE layout issues.  did some file renaming.

--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -1,80 +1,72 @@
 
+/* Reset                                                                     */
+/* ========================================================================= */
+
+  html, body, div, span, applet, object, iframe,
+  h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+  a, abbr, acronym, address, big, cite, code,
+  del, dfn, em, font, img, ins, kbd, q, s, samp,
+  small, strike, strong, sub, sup, tt, var,
+  b, u, i, center,
+  dl, dt, dd, ol, ul, li,
+  fieldset, form, label, legend,
+  table, caption, tbody, tfoot, thead, tr, th, td {
+    background: transparent;
+    border: 0;
+    font-family: "Lucida Grande", "Trebuchet MS", Verdana, sans-serif;
+    font-size: 1em;
+    font-weight: normal;
+    margin: 0;
+    outline: 0;
+    padding: 0;
+    vertical-align: baseline;
+  }
+
+  html, body {
+    font-size: 10px;
+    line-height: 1;
+  }
+
+  ol, ul {
+    list-style: none;
+  }
+
+  blockquote, q {
+    quotes: none;
+  }
+
+  :focus {
+    outline: 0;
+  }
+
+  ins {
+    text-decoration: none;
+  }
+
+  del {
+    text-decoration: line-through;
+  }
+
+  table {
+    border-collapse: collapse;
+    border-spacing: 0;
+  }
+
+
 /* Page                                                                      */
 /* ========================================================================= */
 
   body {
     background: #DDF;
-    font:       10px "Lucida Grande", "Trebuchet MS", Verdana, sans-serif;
   }
 
   div#page {
     background: #FFF;
-    width:      940px;
-    margin:     0 auto;
-    padding:    10px;
-    outline:    1px solid #999;
+    width:      958px;
+    margin:     10px auto;
+    border:     1px solid #999;
   }
-
-
-/* Container                                                                 */
-/* ========================================================================= */
-
-  @media screen and (-webkit-min-device-pixel-ratio:0) {
-    .container {
-      padding: 20px 0;
-    }
+  
+  div.container {
+    margin:     10px;
   }
-
-  .container {
-    position:   relative;
-    background: #999;
-  }
-
-  .container:before {
-    position:   absolute;
-    top:        0;
-    left:       0;
-    z-index:    0;
-    background: url(../images/corner_ne.png) no-repeat top right;
-    content:    url(../images/corner_nw.png);
-    display:    block;
-    width:      100%;
-    height:     20px;
-  }
-
-  .container:after {
-    position:   absolute;
-    bottom:     0;
-    left:       0;
-    z-index:    0;
-    background: url(../images/corner_se.png) no-repeat top right;
-    content:    url(../images/corner_sw.png);
-    display:    block;
-    width:      100%;
-    height:     20px;
-  }
-
-  /* clear fix ------------------------------------------------------------- */
-
-  .container > div.content:after {
-    content:      '.';
-    display:      block;
-    clear:        both;
-    visibility:   hidden;
-    height:       0;
-    line-height:  1;
-  }
-
-  .container > div.content {
-    display:      inline-block;
-    line-height:  1;
-  }
-
-  html[xmlns] .container > div.content {
-    display:    block;
-  }
-
-  * html .container > div.content {
-    height:     1%;
-  }
-
