--- a/public/stylesheets/screen-doors.ie.css
+++ b/public/stylesheets/screen-doors.ie.css
@@ -1,6 +1,10 @@
 /* IE 6 overrides                                                            */
 /* ========================================================================= */
 
+  .container {
+    zoom: 1;
+  }
+
   .container:before {
     background-image: url(../images/8bit/corner_ne.png);
     content:          url(../images/8bit/corner_nw.png);
